--- a/Monist Bank App/style.css
+++ b/Monist Bank App/style.css
@@ -74,6 +74,18 @@ body {
   font-size: 2.4rem;
 }
 
+.visible {
+  opacity: 1;
+  pointer-events: all;
+  visibility: visible;
+}
+
+.no-visible {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
 .main {
   max-width: 109.4rem;
   margin: auto;
@@ -81,8 +93,6 @@ body {
   flex-direction: column;
   gap: 4rem;
   margin-bottom: 4rem;
-  opacity: 1;
-  /* opacity: 0; */
 
   transition: opacity 1s ease;
 }
